--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.mathematics": "1.2.6",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.render-pipelines.core": "14.0.9",
     "com.unity.searcher": "4.9.2",
     "com.unity.shadergraph": "14.0.9",
